--- a/dashboard.html
+++ b/dashboard.html
@@ -176,9 +176,11 @@
 
                     // Simulate Vet Locations (Static Example Data)
                     const vets = [
-                        { name: "City Vet Clinic", lat: pos.lat + 0.01, lng: pos.lng + 0.01, id: 1 },
-                        { name: "Healthy Paws Vet", lat: pos.lat - 0.01, lng: pos.lng - 0.01, id: 2 },
-                        { name: "Animal Care Center", lat: pos.lat + 0.02, lng: pos.lng - 0.01, id: 3 },
+                        { name: "Erhem and", lat:47.9182, lng: 106.9174, id: 1 },
+                        { name: "Ervvl savar", lat: 47.9221, lng: 106.9175, id: 2 },
+                        { name: "Tejeever naiz", lat:  47.9167, lng: 106.9100, id: 3 },
+                        { name: "Mal emneleg", lat: 47.8935, lng: 106.9001, id: 4 },
+                        { name: "Az jargal", lat:  47.9300, lng: 106.8500, id: 5 },
                     ];
 
                     // Add vet markers on the map
