--- a/dashboard.html
+++ b/dashboard.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -116,6 +117,7 @@
     </style>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD9L9CNnPB6uadbfn7ovJ2P3Uh7KyQ-Nzs"></script>
 </head>
+
 <body>
     <!-- Dashboard Container -->
     <div class="dashboard">
@@ -176,11 +178,11 @@
 
                     // Simulate Vet Locations (Static Example Data)
                     const vets = [
-                        { name: "Erhem and", lat:47.9182, lng: 106.9174, id: 1 },
+                        { name: "Erhem and", lat: 47.9182, lng: 106.9174, id: 1 },
                         { name: "Ervvl savar", lat: 47.9221, lng: 106.9175, id: 2 },
-                        { name: "Tejeever naiz", lat:  47.9167, lng: 106.9100, id: 3 },
+                        { name: "Tejeever naiz", lat: 47.9167, lng: 106.9100, id: 3 },
                         { name: "Mal emneleg", lat: 47.8935, lng: 106.9001, id: 4 },
-                        { name: "Az jargal", lat:  47.9300, lng: 106.8500, id: 5 },
+                        { name: "Az jargal", lat: 47.9300, lng: 106.8500, id: 5 },
                     ];
 
                     // Add vet markers on the map
@@ -193,8 +195,9 @@
 
                         // Add info window and click event to go to profile page
                         marker.addListener("click", () => {
-                            window.location.href = `vet_profile.html`;
+                            window.location.href = `vet_profile.html?id=${vet.id}`;
                         });
+
 
                         const infoContent = `<div style="color:#333;">
                                                 <strong>${vet.name}</strong><br>
@@ -230,4 +233,5 @@
         window.onload = initMap;
     </script>
 </body>
+
 </html>
