--- a/add_pet.html
+++ b/add_pet.html
@@ -44,7 +44,7 @@
             </div>
             <button type="submit" class="btn-submit">Мэдээллийг хадгалах</button>
             <div style="margin-top: 10px;"></div>
-            <button type="button" class="btn-submit" onclick="window.location.href='index.html'">Буцах</button>
+            <button type="button" class="btn-submit" onclick="window.location.href='home.html'">Буцах</button>
         </form>
     </div>
 </body>
