--- a/dashboard.html
+++ b/dashboard.html
@@ -128,7 +128,7 @@
             <div class="buttons">
                 <button class="btn-find" onclick="findVets()">Амьтны эмнэлэг хайх</button>
                 <br>
-                <button class="btn-back" onclick="window.location.href='index.html'">Буцах</button>
+                <button class="btn-back" onclick="window.location.href='home.html'">Буцах</button>
             </div>
         </div>
     </div>
