--- a/zowlomj.html
+++ b/zowlomj.html
@@ -108,7 +108,7 @@
         <a href="#dogs">Нохой</a>
     </nav>
 
-    <button class="back-button" onclick="window.location.href='index.html'">Буцах</button>
+    <button class="back-button" onclick="window.location.href='home.html'">Буцах</button>
 
 
     <div class="container">
